--- a/backpack_price_prediction.ipynb
+++ b/backpack_price_prediction.ipynb
@@ -1432,6 +1432,52 @@
     "plt.ylabel(\"Prediction Error\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Generate meta-features\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m train_preds \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mcolumn_stack([\n\u001b[0;32m      4\u001b[0m     rf\u001b[38;5;241m.\u001b[39mpredict(X_valid),\n\u001b[0;32m      5\u001b[0m     xgb\u001b[38;5;241m.\u001b[39mpredict(X_valid),\n\u001b[0;32m      6\u001b[0m     ann\u001b[38;5;241m.\u001b[39mpredict(X_valid)\u001b[38;5;241m.\u001b[39mflatten()\n\u001b[0;32m      7\u001b[0m ])\n\u001b[0;32m      9\u001b[0m test_preds \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mcolumn_stack([\n\u001b[0;32m     10\u001b[0m     rf\u001b[38;5;241m.\u001b[39mpredict(test),\n\u001b[0;32m     11\u001b[0m     xgb\u001b[38;5;241m.\u001b[39mpredict(test),\n\u001b[0;32m     12\u001b[0m     ann\u001b[38;5;241m.\u001b[39mpredict(test)\u001b[38;5;241m.\u001b[39mflatten()\n\u001b[0;32m     13\u001b[0m ])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate meta-features\n",
+    "\n",
+    "train_preds = np.column_stack([\n",
+    "    rf.predict(X_valid),\n",
+    "    xgb.predict(X_valid),\n",
+    "    ann.predict(X_valid).flatten()\n",
+    "])\n",
+    "\n",
+    "test_preds = np.column_stack([\n",
+    "    rf.predict(test),\n",
+    "    xgb.predict(test),\n",
+    "    ann.predict(test).flatten()\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train meta-model\n",
+    "\n",
+    "meta_model = LinearRegression()\n",
+    "meta_model.fit(train_preds, y_valid)\n",
+    "final_preds = meta_model.predict(test_preds)"
+   ]
   }
  ],
  "metadata": {
