--- a/backpack_price_prediction.ipynb
+++ b/backpack_price_prediction.ipynb
@@ -1589,6 +1589,42 @@
     "submission = pd.DataFrame({\"id\": test_ids, \"Price\": final_preds})\n",
     "submission.to_csv(\"submission.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save models\n",
+    "with open(\"random_forest_v1.pkl\", \"wb\") as rf_file:\n",
+    "    pickle.dump(rf, rf_file)\n",
+    "\n",
+    "with open(\"xgboost_v1.pkl\", \"wb\") as xgb_file:\n",
+    "    pickle.dump(xgb, xgb_file)\n",
+    "\n",
+    "with open(\"meta_model_v1.pkl\", \"wb\") as meta_file:\n",
+    "    pickle.dump(meta_model, meta_file)\n",
+    "\n",
+    "ann.save(\"neural_network_v1.keras\")\n",
+    "\n",
+    "# Save encoders and scalers\n",
+    "encoder_dict = {}\n",
+    "for col in categorical_cols:\n",
+    "    le = LabelEncoder()\n",
+    "    le.fit(train[col].astype(str))\n",
+    "    encoder_dict[col] = le\n",
+    "\n",
+    "numerical_cols = ['Compartments', 'Weight Capacity (kg)']\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(train[numerical_cols])\n",
+    "\n",
+    "with open(\"encoder_v1.pkl\", \"wb\") as enc_file:\n",
+    "    pickle.dump(encoder_dict, enc_file)\n",
+    "\n",
+    "with open(\"scaler_v1.pkl\", \"wb\") as scaler_file:\n",
+    "    pickle.dump(scaler, scaler_file)"
+   ]
   }
  ],
  "metadata": {
